--- a/app/views/sections.erb
+++ b/app/views/sections.erb
@@ -1,10 +1,25 @@
+<h1>This is Section <%= params[:id] %></h1>
 
-<h1>This page will display all of the users sections</h1>
+<h2>Students:</h2>
 
-<h1>This is only available if you are logged in</h1>
+<% @all = Student.all %>
+<% array_of_students = [] %>
+<% @all.each do |student| %>
+    <% if student[:section] == params[:id].to_i %>
+        <% array_of_students << student %>
+    <% end %>
+<% end %>
 
-<h2>Welcome <%= current_user.username %>! </h2>
+<% array_of_students.each do |student| %>    
+    <ul> <%= student[:name] %> - <%= student[:score] %>     <button>Delete</button></ul>
+<% end %>
 
-<h2>Your Classes:</h2>
 
-<%= binding.pry %>
+<%# This form isn't adding people to sections properly %>
+
+<form action="/user" method="POST">
+	<input id="name" type="text" name="name" placeholder="Student Name">
+	<input id="section" type="integer" name="section" placeholder=<%=params[:id].to_i%>>
+	<input id="score" type="integer" name="score" placeholder="Student Score">
+	<input type="submit" value="Add Student">
+</form>
