--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,9 +1,9 @@
 
-<h1>This is a form that allows you to sign-up</h1>
+<h1>Create a username and password for your classroom account!</h1>
 
 <h3>Sign Up</h3>
 <form action="/signup" method="POST">
-	<input type="text" name="username" placeholder="Username:">
-	<input type="password" name="password" placeholder="Password:">
+	<input id="username" type="text" name="username">
+	<input id="password" type="password" name="password">
 	<input type="submit" value="Sign Up">
 </form>
