--- a/app/views/sections.erb
+++ b/app/views/sections.erb
@@ -1,4 +1,4 @@
-<h1>This is Section <%= params[:id] %></h1>
+<h1>This is Section <%= params[:id].to_i %></h1>
 
 <h2>Students:</h2>
 
@@ -9,17 +9,24 @@
         <% array_of_students << student %>
     <% end %>
 <% end %>
-
+<% array_of_students = array_of_students.sort_by {|obj| obj.score} %>
 <% array_of_students.each do |student| %>    
     <ul> <%= student[:name] %> - <%= student[:score] %>     <button>Delete</button></ul>
 <% end %>
 
 
+<form action="/students_arranged" method="GET">
+	<input id="section" type="hidden" value="<%=params[:id].to_i%>">
+	<input type="submit" value="Create Groups!">
+</form>
+
+
 <%# This form isn't adding people to sections properly %>
 
-<form action="/user" method="POST">
+<form action="/students" method="POST">
 	<input id="name" type="text" name="name" placeholder="Student Name">
-	<input id="section" type="integer" name="section" placeholder=<%=params[:id].to_i%>>
+	<input id="section" type="hidden" name="section" value="<%= params[:id] %>">
 	<input id="score" type="integer" name="score" placeholder="Student Score">
 	<input type="submit" value="Add Student">
 </form>
+
