--- a/app/views/user.erb
+++ b/app/views/user.erb
@@ -1,15 +1,8 @@
 
-<h1>This page will display all of the users users</h1>
-<h1>By clicking on a student, the optimal grouips will be displayed</h1>
 
-<h1>This is only available if you are logged in</h1>
+<h1>This should only be available if you are logged in</h1>
 
 <h2>Welcome <%= current_user.username %>! </h2>
-
-<%# Duplicate Class names is going to be a problem %>
-
-<%# <%= @student.name %>
-
 
 
 
@@ -18,17 +11,22 @@
 <% @all = Student.all %>
 <% array_of_sections = [] %>
 <% @all.each do |section| %>
-	<% if !array_of_sections.include?(section[:section]) %>
+	<% if !array_of_sections.include?(section[:section]) && section[:user_id] == current_user.id %>
 		<% array_of_sections << section[:section] %>
 	<% end %>
 <% end %>
 
+<% array_of_sections = array_of_sections.sort %>
+
 <% array_of_sections.each do |section| %>
-	<a href="/user/<%=current_user[:id]%>/sections/<%=section%>"><%= section %></a><br><br>
+	<a href="/user/<%=current_user[:id]%>/sections/<%=section%>"> Section: <%= section %></a> </ul>
+	<br><br>
 <% end %>
 
 
-<form action="/user" method="POST">
+<form action="/students" method="POST">
 	<input id="section" type="integer" name="section" placeholder="Student Section">
+	<input id="name" type="hidden" name="name" value="John Doe">
+	<input id="score" type="hidden" name="score" value="100">
 	<input type="submit" value="Add a Section">
 </form>
