Rearranged url paths

--- a/app/views/navbar.erb
+++ b/app/views/navbar.erb
@@ -1,3 +1,6 @@
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">   
+  
+  
   <nav>
     <div class="nav-wrapper">
       <a href="#" class="brand-logo right">Logo</a>
