--- a/app/views/sections.erb
+++ b/app/views/sections.erb
@@ -18,7 +18,12 @@
 <% end %>
 <% array_of_students = array_of_students.sort_by {|obj| obj.score} %>
 <% array_of_students.each do |student| %>    
-    <ul> <%= student[:name] %> - <%= student[:score] %>     <button>Delete</button></ul>
+    <ul> <%= student[:name] %> - <%= student[:score] %>
+		<form action="/delete_student" method="POST">
+			<input id="name" type="hidden" value="<%=student%>">
+			<input type="submit" value="Delete Student">
+		</form>
+	</ul>
 <% end %>
 
 
