--- a/app/views/students_arranged.erb
+++ b/app/views/students_arranged.erb
@@ -11,6 +11,7 @@
 
 <% number_of_students = current_section_of_students.length %>
 <% number_of_students %>
+<%# The number 4 below could be a param and therefore teachers could choose how large to make groups %>
 <% number_of_groups = number_of_students / 4 %>
 <% number_of_groups = number_of_groups.floor %>
 
