--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-  
+
+<head>
+<link rel="stylesheet" type="text/css" href="./resources/css/style.css">
+</head>
+
+<body>
 <h1>Welcome to Classroom</h1>
 
 <a href="/signup"><button>Sign Up</button></a><a href="/login"><button>Log In</button></a>
-
+</body>
 
 </html>
