--- a/app/views/students_arranged.erb
+++ b/app/views/students_arranged.erb
@@ -3,7 +3,7 @@
 <% @all = Student.all %>
 <% current_section_of_students = [] %>
 <% @all.each do |student| %>
-    <% if student[:section] == @selected_section.to_i %>
+    <% if student[:section] == @selected_section.to_i && student[:user_id] == session[:user_id] %>
         <% current_section_of_students << student %>
     <% end %>
 <% end %>
@@ -14,6 +14,7 @@
 <%# The number 4 below could be a param and therefore teachers could choose how large to make groups %>
 <% number_of_groups = number_of_students / 4 %>
 <% number_of_groups = number_of_groups.floor %>
+
 
 <% high = []  %>
 <% m_high = []  %>
@@ -34,7 +35,7 @@
         <% m_high << student %>
     <% elsif counter <= number_of_groups * 4 && counter > number_of_groups * 3 %>
         <% high << student %>
-    <% elsif counter <= number_of_groups * 5 && counter > number_of_groups * 4 %>
+    <% elsif counter <= (number_of_groups + 1) * 5 && counter > number_of_groups * 4 %>
         <% remainder << student %>
     <% end %>
     <% counter += 1 %>
