Working through validations and new classes

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -10,7 +10,7 @@
         <br>
         <br>
     <span>
-        <button style='float:right;'><a href="/"><b>Home</b></a></button>
+        <button style='float:right;'><a href="/"><b>Sections</b></a></button>
     </span>
     </div>
     <div class="container">
