Changed relationship to has-and-belongs-to-many

--- a/app/views/sections.erb
+++ b/app/views/sections.erb
@@ -8,7 +8,7 @@
 <% array_of_students = [] %>
 
 <% @all.each do |student| %>
-    <% if student[:section_id] == @section_id.to_i %>
+    <% if student[:section_id] == @section_id.to_i && student[:section_id] %>
         <% array_of_students << student %>
     <% end %>
 <% end %>
@@ -17,7 +17,6 @@
     <ul> <%= student[:name] %> - <%= student[:score] %>
 		<form action="/delete_student" method="POST">
 			<input id="id" name ="id" type="hidden" value="<%=student[:id]%>">
-			<input id="section" name ="section" type="hidden" value="<%=student[:section]%>">
 			<input type="submit" value="Delete Student">
 		</form>
 	</ul>
@@ -30,7 +29,7 @@
 
 <form action="/students" method="POST">
 	<input id="name" type="text" name="name" placeholder="Student Name">
-	<input id="section" type="hidden" name="section" value="<%=params[:section]%>">
+	<input id="section" type="hidden" name="section" value="<%=session[:section_id]%>">
 	<input id="score" type="integer" name="score" placeholder="Student Score">
 	<input id="user_id" type="hidden" name="user_id" value="<%=current_user[:id]%>">
 	<input type="submit" value="Add Student">
