--- a/app/views/sections.erb
+++ b/app/views/sections.erb
@@ -7,11 +7,9 @@
 <% @all = Student.all %>
 <% array_of_students = [] %>
 
-<% @all.each do |student| %>
-    <% if student[:section_id] == @section_id.to_i && student[:section_id] %>
-        <% array_of_students << student %>
-    <% end %>
-<% end %>
+
+<% array_of_students = Student.where(:user_id => session[:user_id].to_i, :section_id => session[:section_id]) %>
+
 <% array_of_students = array_of_students.sort_by {|obj| obj.score} %>
 <% array_of_students.each do |student| %>    
     <ul> <%= student[:name] %> - <%= student[:score] %>
