--- a/app/views/students_arranged.erb
+++ b/app/views/students_arranged.erb
@@ -51,4 +51,6 @@
     <% final_group.each do |student| %>
     <%= student[:name] %><br>
     <% end %>
+<% else %>
+    <h2>You don't have any students yet.</h2>
 <% end %>
