--- a/app/views/user.erb
+++ b/app/views/user.erb
@@ -8,9 +8,14 @@
 <% array_of_sections = array_of_sections.sort_by {|obj| obj.period_number } %>
 
 <% array_of_sections.each do |section| %>
+		<% @sectionid = section.id %>
 		<form action="/sections/<%=section[:period_number]%>" method="POST">
 			<input id="section" type="hidden" name="section" value="<%=section[:period_number]%>">
 			<input type="submit" value="Section: <%=section[:period_number]%>">
+		</form><span>
+		<form action="/delete_sections" method="POST">
+			<input id="section" name="section" type="hidden" value="<%=@sectionid%>">
+			<input type="submit" value="Remove Section">
 		</form>
 		<br>
 <% end %>
