--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,7 +2,7 @@
     <div>
     <br>
         <% if current_user.nil? %>
-    <a href="/login"><b> Login </b></a>  || <a href="/users/new"><b> SignUp </b></a>
+    <a href="/login"><b> Login </b></a>  || <a href="/signup"><b> SignUp </b></a>
         <% else %>
    <h1> Welcome <%= current_user[:username] %>!</h1> </h1>
         <a href="/logout"><b> LogOut </b></a>
