added placeholder to sign-in page

--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -3,7 +3,7 @@
 
 <h3>Sign Up</h3>
 <form action="/signup" method="POST">
-	<input id="username" type="text" name="username">
-	<input id="password" type="password" name="password">
+	<input id="username" type="text" name="username" placeholder="username">
+	<input id="password" type="password" name="password" placeholder="password">
 	<input type="submit" value="Sign Up">
 </form>
