--- a/app/views/edit_student.erb
+++ b/app/views/edit_student.erb
@@ -1,13 +1,14 @@
 
-<h1>Student: <%=@selected_student.name%> - <%=@selected_student.score%></h1>
+<h1>Student: <%=@selected_student.name%><br>Score: <%=@selected_student.score%>
+</h1>
 
 <h2>New Information:</h2> 
 
-<form action="/patch_student" method="POST">
+<form action="/students/<%= @selected_student.id %>" method="POST">
+	<input id="hidden" type="hidden" name="_method" value="patch">
 	<input id="name" type="text" name="name" value="<%=@selected_student.name%>">
 	<input id="section" type="hidden" name="section" value="<%=session[:section_id]%>">
 	<input id="score" type="integer" name="score" value="<%=@selected_student.score%>">
-	<input id="user_id" type="hidden" name="user_id" value="<%=current_user[:id]%>">
 	<input id="id" type="hidden" name="id" value="<%=@selected_student[:id]%>">
 	<input type="submit" value="Update Student">
 </form>
